# TriangleAlpha-Master

./: .gitignore  Makefile  demo_bigscreen.py  findings.md  master.spec  mutagen.yml  progress.md  pyproject.toml  slave.spec  task_plan.md
.github/: commit-guide.md  copilot-instructions.md
docs/: Diagnose-TAEnv.ps1  环境诊断指南.md
docs/plans/: 2026-05-08-perf-optimization-plan.md  2026-05-09-accountdb-threading-plan.md
scripts/windows/: unblock_trianglealpha.cmd  unblock_trianglealpha.ps1
src/: common_app_version.py
src/common/: app_version.py  models.py  protocol.py
src/master/: main.py
src/master/app/common/: config.py  signal_bus.py  (+1 more)
src/slave/: account_syncer.py  auto_setup.py  backend.py  command_handler.py  gpu_monitor.py  heartbeat.py  ipc_receiver.py  log_reporter.py  logging_utils.py  main.py  models.py  process_manager.py  process_watcher.py  runtime_paths.py  self_update.py  slave_window.py  state_store.py  status_aggregator.py  windows_security.py
tests/: .gitignore  test_account_db.py  test_account_interface.py  test_account_pool.py  test_app_version.py  test_bigscreen_interactions.py  test_e2e_fixes.py  test_e2e_network.py  test_gpu_monitor.py  test_integration.py  test_ipc_receiver.py  test_log_receiver.py  test_log_reporter.py  test_master_fixes.py  test_models.py  test_node_manager.py  test_platform_client.py  test_protocol.py  test_protocol_contracts.py  test_protocol_discovery.py  test_slave_fixes.py  test_slave_modules.py  test_slave_state_store.py  test_tcp_commander.py  test_udp_listener_bind_failure.py  test_udp_listener_connreset.py
(+35 files in other folders)
