[project]
name = "triangle-alpha-master"
version = "1.0.18"
description = "TriangleAlpha 群控系统"
requires-python = ">=3.12"
dependencies = [
    "PyQt6>=6.7",
    "PyQt6-Fluent-Widgets>=1.7.0",
    "psutil>=5.9",
    "httpx>=0.27",
]

[project.scripts]
master = "master.main:main"
slave = "slave.main:main"

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pyinstaller>=6.0",
    "cairosvg>=2.9.0",
    "pillow>=12.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common", "src/master", "src/slave"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
